--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
-    "react-preloaders": "^3.0.3",
+    "react-preloader-icon": "^1.0.0",
     "react-router": "^5.2.0",
     "react-router-dom": "5.2.0",
     "react-router-transition": "^2.0.0",
