--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-external-link": "^1.1.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^3.10.0",
+    "react-lazy-load-image-component": "^1.5.0",
     "react-preloader-icon": "^1.0.0",
     "react-router": "^5.2.0",
     "react-router-dom": "5.2.0",
